update package.json and fix modal alignment

--- a/src/app/components/modal/modal.component.sass
+++ b/src/app/components/modal/modal.component.sass
@@ -4,7 +4,7 @@
   left: 0
   z-index: 6
   width: 100vw
-  height: 100vw
+  height: 100vh
   background-color: #00000084
   display: flex
   justify-content: center
